--- a/Eventra/index.html
+++ b/Eventra/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/Eventra/src/assets/eventralogo.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <title>Vite + React</title>
+    <!-- Page Title -->
+    <title>Eventra - Book Your Next Experience</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/src/assets/eventralogo.png" />
+
+    <!-- Meta Tags -->
+    <meta name="description" content="Eventra - Seamless event booking platform for concerts, shows, and more." />
+    <meta name="keywords" content="Eventra, event booking, tickets, concerts, shows, events in India" />
+    <meta name="author" content="Eventra Team" />
   </head>
   <body>
     <div id="root"></div>
